--- a/style.css
+++ b/style.css
@@ -3,12 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  background-image: linear-gradient(225deg, #0d25b9 10%, #fd6585 100%);
+}
+
 .container {
   height: 100vh;
   width: 100vw;
 }
 .navcontainer {
-  background-color: rgba(133, 133, 154, 0.776);
+  background-image: linear-gradient(135deg, #fd6585 10%, #0d25b9 100%);
   min-height: 80px;
   width: 100vw;
   display: flex;
@@ -33,6 +37,36 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
+#navitems {
+  display: flex;
+  gap: 1.3rem;
+}
 #navlogo {
-  font-size: 3rem;
+  font-size: 4rem;
+  color: rgb(255, 230, 199);
+}
+.navlink {
+  text-decoration: none;
+  background-color: transparent;
+  color: rgb(255, 230, 199);
+}
+.navlink:hover {
+  color: #fd6585;
+  background-color: transparent;
+  text-decoration: none;
+}
+.contentbox {
+  width: 70%;
+  margin: auto;
+  border: 2px solid black;
+}
+.footerbox {
+  min-height: 25px;
+  text-align: center;
+  width: 100%;
+  background-image: linear-gradient(135deg, #fd6585 10%, #0d25b9 100%);
+}
+.footerbox p {
+  color: rgb(255, 230, 199);
+  font-size: 1rem;
 }
