--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(225deg, #0d25b9 10%, #fd6585 100%);
+  background-color: rgb(227, 227, 230);
+  overflow-x: hidden;
 }
 
 .container {
@@ -12,7 +13,9 @@ body {
   width: 100vw;
 }
 .navcontainer {
-  background-image: linear-gradient(135deg, #fd6585 10%, #0d25b9 100%);
+  background-color: #041823;
+  background-image: linear-gradient(160deg, #041823 0%, #0daf9f 100%);
+
   min-height: 80px;
   width: 100vw;
   display: flex;
@@ -34,7 +37,7 @@ nav {
   font-size: 1.3rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 #navitems {
@@ -43,30 +46,90 @@ nav {
 }
 #navlogo {
   font-size: 4rem;
-  color: rgb(255, 230, 199);
+  color: rgb(255, 254, 254);
 }
 .navlink {
   text-decoration: none;
   background-color: transparent;
-  color: rgb(255, 230, 199);
+  color: rgb(242, 242, 242);
 }
 .navlink:hover {
-  color: #fd6585;
+  color: #534f50;
   background-color: transparent;
   text-decoration: none;
 }
+section {
+  margin: 1.5rem;
+}
 .contentbox {
-  width: 70%;
+  width: 80%;
   margin: auto;
-  border: 2px solid black;
+  /* border: 2px solid black; */
+  margin-bottom: 2rem;
+  padding: 2rem;
+  box-shadow: 0px 0px 50px 0px rgba(7, 7, 7, 0.653);
 }
 .footerbox {
   min-height: 25px;
   text-align: center;
   width: 100%;
-  background-image: linear-gradient(135deg, #fd6585 10%, #0d25b9 100%);
+  background-color: #041823;
+  background-image: linear-gradient(160deg, #041823 0%, #0daf9f 100%);
 }
 .footerbox p {
   color: rgb(255, 230, 199);
   font-size: 1rem;
+}
+.item {
+  display: flex;
+  justify-content: space-around;
+}
+.rightbox {
+  position: relative;
+  overflow: hidden;
+  transition: all 0.35s ease-in-out 0s;
+}
+.rightbox img {
+  height: 80%;
+  width: 100%;
+  border-radius: 1.5rem;
+  box-shadow: 0px 0.6rem 10px black;
+}
+.rightbox:hover {
+  transform: scale(1.1);
+}
+.rightbox .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 80%;
+  width: 100%;
+  background-color: #313237ce;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.5rem;
+  opacity: 0;
+  transition: all 0.35s linear 0s;
+}
+.rightbox .overlay:hover {
+  opacity: 1;
+}
+.rightbox .overlay a {
+  color: white;
+}
+.leftbox {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.leftbox h2 {
+  margin-top: 1rem;
+  font-size: 2rem;
+}
+.Ingredientsbox {
+  font-size: 1.2rem;
+}
+.Recipebox {
+  font-size: 1.2rem;
 }
